# BladeDefect

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: ablation.yaml  class_hierarchy.yaml  data.yaml  dataset_filter.yaml  hard_error_review.json  train.yaml
configs/experiments/: exp001.yaml  exp008.yaml  obb_smoke_yolo11s_960.yaml
docs/: ENVIRONMENT.md  EXPERIMENTS.md  class_mapping.md  dataset_report.md  dataset_version.md
docs/experiments/: exp001.md  exp008.md
scripts/: analyze_class_hierarchy.py  analyze_dataset.py  check_dataset.py  check_obb_dataset.py  check_split_leakage.py  convert_seg_to_obb.py  create_small_dataset.py  finalize_dataset_manifest.py  freeze_dataset.py  review_hard_errors.py  run_obb_smoke.py  train.py  visualize_obb_labels.py
src/blade_defect/: __init__.py  cli.py
src/blade_defect/app/: streamlit_app.py
src/blade_defect/data/: __init__.py  class_hierarchy.py  cleaning.py  dataset_filter.py  defect_classes.py  label_check.py  obb_check.py  split.py
src/blade_defect/evaluation/: __init__.py  ablation.py  metrics.py
src/blade_defect/experiment/: __init__.py  analyzer.py  config.py  exporter.py  failure_cases.py  prediction_exporter.py  registry.py  runner.py
src/blade_defect/fusion/: __init__.py  base.py  identity.py
src/blade_defect/models/: __init__.py  predictor.py  trainer.py
tests/: test_ablation.py  test_class_hierarchy.py  test_core_utils.py  test_data_tools.py  test_dataset_analysis.py  test_experiment.py  test_fusion.py  test_label_check.py  test_obb_conversion.py
(+6 files in other folders)
