[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blade-defect"
version = "0.1.0"
description = "Wind turbine blade defect segmentation with Ultralytics YOLO"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ultralytics>=8.3.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "PyYAML>=6.0.1",
    "streamlit>=1.32.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.66.0",
]

[project.scripts]
blade-defect = "blade_defect.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
